fixed scrollbars

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,14 +2,18 @@
   text-align: center;
 }
 
-html, body{
-  overflow:hidden;
-}
-
 html,body
 {
     width: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+}
+
+html {
+  overflow:   scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
 }
