--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,8 +11,7 @@ html {
   overflow:   scroll;
 }
 ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
+  display: none;
 }
 
 code {
